# alfig

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
alfig/: __init__.py  cli.py  core.py  schema.py
alfig/formats/: __init__.py  conf_fmt.py  json_fmt.py  toml_fmt.py  yaml_fmt.py
docs/: api.md  conf-format.md
examples/: basic_usage.py  conf_format.py  format_conversion.py  schema_validation.py
tests/: test_alfig.py
